--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,6 +1,9 @@
 <section class="todoapp">
   <header class="header">
     <h2>todos</h2>
+    <form id="new-form">
+      <input type="text" class="new-todo" />
+    </form>
   </header>
 
   <section class="main">
@@ -13,6 +16,12 @@
 
 <script>
   $(function() {
+    $('#new-form').submit(function(event){
+      event.preventDefault();
+      var textbox = $('.new-todo');
+      console.log("Task: ", textbox.val());
+    });
+
     function taskHtml(task) {
       var checkedStatus = task.done ? "checked" : "";
       var liElement = '<li><div="view"><input class="toggle" type="checkbox"' +
