updated background image

--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -27,7 +27,7 @@ button {
 body {
   font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
   line-height: 1.4em;
-  background: image_url('back.jpg') no-repeat center center fixed;
+  background: image_url('back5.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -387,5 +387,5 @@ html .clear-completed:active {
 }
 
 .author a {
-  color: #b83f45;
+  color: #02302D;
 }
